[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.0",
    "aiohttp-socks>=0.11.0",
    "aiomysql>=0.3.2",
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "curl-cffi>=0.15.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "livekit>=1.1.9",
    "loguru>=0.7.3",
    "orjson>=3.11.9",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "toml>=0.10.2",
    "uvicorn[standard]>=0.48.0",
    "websockets>=16.0",
]
